# shuttle-template-vite-vanilla

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  justfile
site/vite-vanilla/: bun.lockb  package.json  vite.config.js
src/lib/: lib.rs  service.rs  startup.rs  telemetry.rs
src/lib/handlers/: health.rs  mod.rs
